--- a/src/main/resources/templates/fragments/login/fragment_config.html
+++ b/src/main/resources/templates/fragments/login/fragment_config.html
@@ -19,9 +19,9 @@
     <!-- Theme style -->
     <link rel="stylesheet" type="text/css" th:href="@{/vendor/AdminLTE/css/adminlte.min.css}">
 
-    <!-- Google Font: Source Sans Pro -->
+    <!-- Google Font: Source Sans Pro 
     <link th:href="@{/css/googlefont.css" rel="stylesheet">
-
+-->
     <!-- Theme style -->
     <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
 
