--- a/src/main/resources/templates/fragments/common/fragment_config.html
+++ b/src/main/resources/templates/fragments/common/fragment_config.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>PowerNote || 환영합니다.</title>
+    <title>Testing || 환영합니다.</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
