--- a/src/main/resources/templates/fragments/common/fragment_footer.html
+++ b/src/main/resources/templates/fragments/common/fragment_footer.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 
 <footer class="main-footer" th:fragment="footerFragment">
-    <strong>Copyright &copy; 2014-2019 <a th:href="@{/main}">PowerNote</a>.</strong>
+    <strong>Copyright &copy; 2023-2024 <a th:href="@{/main}">Testing Platform</a>.</strong>
     All rights reserved.
     <div class="float-right d-none d-sm-inline-block">
         <b>^^</b>
