--- a/src/main/resources/templates/fragments/common/fragment_side.html
+++ b/src/main/resources/templates/fragments/common/fragment_side.html
@@ -32,7 +32,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a th:href="@{/tutorials}" class="nav-link">
             <i ></i>
             <p>거래 관리</p>
           </a>
@@ -61,13 +61,13 @@
           <ul class="nav nav-treeview">
             <li class="nav-item">
               <a href="#" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
+                <i class="far fa-dash nav-icon"></i>
                 <p>page 3-1</p>
               </a>
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
+                <i class="far fa-dash nav-icon"></i>
                 <p>page 3-2</p>
               </a>
             </li>
@@ -78,20 +78,20 @@
             <i class="nav-icon far fa-plus-square"></i>
             <p>
               Extras
-              <i class="fas fa-angle-left right"></i>
+              <i ></i>
             </p>
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
               <a href="#" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Extras page 1</p>
+                <i class="far fa-dash nav-icon" ></i >
+                <p>   Extras page 1</p>
               </a>
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Extras page 2</p>
+                <i class="far fa-dash nav-icon"></i>
+                <p>   Extras page 2</p>
               </a>
             </li>
           </ul>
