--- a/src/main/resources/templates/fragments/common/fragment_side.html
+++ b/src/main/resources/templates/fragments/common/fragment_side.html
@@ -4,7 +4,7 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4" th:fragment="sideFragment">
   <!-- Brand Logo -->
   <a th:href="@{/main}" class="brand-link">
-    <img th:src="@{/images/AdminLTELogo.png}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+    <img th:src="@{/images/64px-KB_logo.png}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
          style="opacity: .8">
     <span class="brand-text font-weight-light">Testing</span>
   </a>
