Add customerList using paging

--- a/src/main/resources/templates/pages/hello.html
+++ b/src/main/resources/templates/pages/hello.html
@@ -6,7 +6,8 @@
 <body>
 
 <div class="content-wrapper" layout:fragment="content">
-    HELLO
+    <p><span th:text="${username}"/> </p>
+    
 </div>
 
 </body>
