--- a/src/main/resources/templates/fragments/common/fragment_jsimport.html
+++ b/src/main/resources/templates/fragments/common/fragment_jsimport.html
@@ -12,5 +12,6 @@
     <!-- AdminLTE App -->
     <script th:src="@{/vendor/AdminLTE/js/adminlte.min.js}"></script>
     <script th:src="@{/js/common.js}"></script>
+	<script th:src="@{/js/charts/loader.js}"></script>    
 </th:block>
 </html>
