--- a/src/main/resources/templates/pages/homepage.html
+++ b/src/main/resources/templates/pages/homepage.html
@@ -2,12 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/layout_common}"
-      >
+>
 <body>
-
 <div class="content-wrapper" layout:fragment="content">
-    Testing Platform 에 오신것을 환영합 2
+    <p>Hello username, and welcome to the application</p>
+    <p><span th:text="${username}">Username</span> , Hello world!</p>
+    <p><span th:text="${username}"/></p>
+    <br/>
 </div>
-
 </body>
 </html>
