--- a/src/main/resources/templates/fragments/common/fragment_header.html
+++ b/src/main/resources/templates/fragments/common/fragment_header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" >
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <!-- Navbar -->
 <nav class="main-header navbar navbar-expand navbar-white navbar-light" th:fragment="headerFragment">
     <!-- Left navbar links -->
@@ -11,8 +11,15 @@
             <a th:href="@{/hello}" class="nav-link">Home</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
+            <a th:href="@{/customer/list}" class="nav-link">Customer</a>
+        </li>
+        <li class="nav-item d-none d-sm-inline-block">
+            <a th:href="@{/user/register}" class="nav-link">User</a>
+        </li>
+        <li class="nav-item d-none d-sm-inline-block">
             <a href="#" class="nav-link">Contact</a>
         </li>
+
     </ul>
 
     <!-- SEARCH FORM 
@@ -29,7 +36,7 @@
 	-->
     <!-- Right navbar links -->
     <ul class="navbar-nav ml-auto">
-  
+
         <li class="nav-item">
             <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
                 <i class="fas fa-th-large"></i>
