--- a/src/main/resources/templates/fragments/common/fragment_config.html
+++ b/src/main/resources/templates/fragments/common/fragment_config.html
@@ -14,7 +14,9 @@
     <!-- Theme style -->
     <link rel="stylesheet" type="text/css" th:href="@{/vendor/AdminLTE/css/adminlte.min.css}">
 
-
+    <!-- Theme style -->
+    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}">
+    
     <!-- Theme style -->
     <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
 
