--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -3,11 +3,13 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/layout_common}"
 >
+
 <body>
-<div class="container my-2" align="center">
+
     <div class="content-wrapper" layout:fragment="content">
+    <div class="container my-2" align="left">
         <h3>Employee List</h3>
-        <a th:href="@{/employee/addnew}" class="btn btn-primary btn-sm mb-3">Add Employee</a>
+        <a th:href="@{/employee/addnew}"align="left"  class="btn btn-primary btn-sm mb-3">Add Employee</a>
         <table style="width:80%" border="1"
                class="table table-striped table-responsive-md">
             <thead>
@@ -29,6 +31,28 @@
             </tr>
             </tbody>
         </table>
+        <div >
+			<div class = "row col-sm-10">
+				<div class = "col-sm-2">
+					Total Rows: [[${totalItems}]] 
+				</div>
+				<div class = "col-sm-1">
+					<span th:each="i: ${#numbers.sequence(1, totalPages)}">
+						<a th:if="${currentPage != i}" th:href="@{'/page/' + ${i}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
+						<span th:unless="${currentPage != i}">[[${i}]]</span>  &nbsp; &nbsp;
+					</span>
+				</div>
+				<div class = "col-sm-1">
+					<a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${currentPage + 1}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
+					<span th:unless="${currentPage < totalPages}">Next</span>
+				</div>
+				
+				 <div class="col-sm-1">
+    				<a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${totalPages}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
+					<span th:unless="${currentPage < totalPages}">Last</span>
+   				 </div>
+			</div>
+		</div>
     </div>
 </div>
 </body>
