--- a/src/main/resources/templates/employee/newemployee.html
+++ b/src/main/resources/templates/employee/newemployee.html
@@ -4,19 +4,26 @@
       layout:decorate="~{layout/layout_common}"
 >
 <body>
-<div class="container my-2" align="center">
-    <div class="content-wrapper" layout:fragment="content">
+
+<div class="content-wrapper" layout:fragment="content">
+    <div class="container my-2" align="center">
         <h1>Employee Management System</h1>
         <hr>
         <h2>Save Employee</h2>
 
         <form action="#" th:action="@{/employee/save}" th:object="${employee}"
               method="POST">
+            <div class="form-group">
+            <label >nickname</label>
             <input type="text" th:field="*{nickname}" placeholder="Employee Name"
-                   class="form-control mb-4 col-4"> <input type="text"
+                   class="form-control mb-4 col-4"> 
+           </div>   
+             <div class="form-group">
+                <label >email</label>   
+                   <input type="text"
                                                            th:field="*{email}" placeholder="Employee Email"
                                                            class="form-control mb-4 col-4">
-
+             </div>
             <button type="submit" class="btn btn-info col-2">Save
                 Employee
             </button>
