--- a/src/main/resources/templates/fragments/common/fragment_header.html
+++ b/src/main/resources/templates/fragments/common/fragment_header.html
@@ -17,6 +17,10 @@
             <a th:href="@{/user/register}" class="nav-link">User</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
+            <a th:href="@{/employee/list}" class="nav-link">Employee</a>
+        </li>        
+        
+        <li class="nav-item d-none d-sm-inline-block">
             <a href="#" class="nav-link">Contact</a>
         </li>
 
